--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <td>${escapeHtml(e.status)}</td>
             <td>
               <button class="detail-btn" data-index="${index}">ดูเพิ่มเติม</button>
-              <a href="detail.html?id=${encodeURIComponent(e.code)}" style="margin-left:8px; font-size:0.9em;">หน้าเต็ม</a>
+              <button class="detail-btn"<a href="detail.html?id=${encodeURIComponent(e.code)}" style="margin-left:8px; font-size:0.9em;">หน้าเต็ม</a></button>
             </td>
           </tr>
         `
