--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <td>${escapeHtml(e.status)}</td>
             <td>
               <button class="detail-btn" data-index="${index}">ดูเพิ่มเติม</button>
-              <button class="detail-btn" a href="detail.html?id=${encodeURIComponent(e.code)}">หน้าเต็ม</button>
+              <a class="detail-btn" href="detail.html?id=${encodeURIComponent(e.code)}">ดูประวัติ</a>
             </td>
           </tr>
         `
