--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
             <td>
               <button class="detail-btn" data-index="${index}">ดูเพิ่มเติม</button>
               <a class="detail-btn" href="detail.html?id=${encodeURIComponent(e.code)}">ดูประวัติ</a>
+              <button class="detail-btn" onclick="location.href='detail.html?id=${encodeURIComponent(e.code)}'">หน้าเต็ม</button>
             </td>
           </tr>
         `
