--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <td>${escapeHtml(e.location)}</td>
             <td>${escapeHtml(e.status)}</td>
             <td>
-              <button class="detail-btn" onclick="location.href='detail.html?id=${encodeURIComponent(e.code)}'">หน้าเต็ม</button>
+              <button class="detail-btn" onclick="location.href='detail.html?id=${encodeURIComponent(e.code)}'">ดูประวัติ</button>
             </td>
           </tr>
         `
