--- a/detail.html
+++ b/detail.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>รายละเอียดครุภัณฑ์</title>
-  <link rel="stylesheet" href="detail.css">
+  <link rel="stylesheet" href="./css/detail.css">
 </head>
 <body>
   <header>
