--- a/detail.html
+++ b/detail.html
@@ -18,6 +18,6 @@
       <h2>กำลังโหลดข้อมูล...</h2>
     </div>
   </main>
-  <script src="./scripts/Show.js"></script>
+  <script src="./scripts/LOG.js"></script>
 </body>
 </html>
