--- a/test.html
+++ b/test.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
+<html lang="th">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>เข้าสู่ระบบ | ระบบครุภัณฑ์</title>
+  <link rel="stylesheet" href="./css/dashborad.css">
 <body>
-
 <header>
   <h1>ระบบจัดการครุภัณฑ์ (Admin)</h1>
   <div class="header-right">
@@ -42,3 +48,4 @@
 
 <script src="test.js"></script>
 </body>
+</html>
