--- a/test.html
+++ b/test.html
@@ -13,6 +13,7 @@
     <button id="logout-btn">ออกจากระบบ</button>
   </div>
 </header>
+<div id="detail"></div>
 <script src="test.js"></script>
 </body>
 </html>
