--- a/index.html
+++ b/index.html
@@ -1,55 +1,95 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ระบบตรวจสอบครุภัณฑ์</title>
-  <link rel="stylesheet" href="./css/index.css"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ระบบตรวจสอบครุภัณฑ์</title>
+    <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  
+  <style>
+    /* สี Header ตามรูปตัวอย่าง */
+    .app-header {
+        background-color: #4a90e2; /* สีฟ้าอ่อน/น้ำเงินตามรูป */
+        color: white;
+    }
+    /* พื้นหลังโดยรวม */
+    body {
+        background-color: #f8f9fa; /* สีเทาอ่อน */
+    }
+    /* ปรับปรุง Search Input ให้ดูดีขึ้นเล็กน้อย */
+    .search-input-group {
+        width: 250px;
+    }
+  </style>
 </head>
 
 <body>
-  <header>
-    <div class="logo">LOGO</div>
-    <h1>ระบบตรวจสอบครุภัณฑ์</h1>
-    <div class="header-actions">
-      <input type="text" id="searchInput" placeholder="ค้นหา..." class="search-input" />
-      <a href="login.html" class="login-btn">LOGIN</a>
-    </div>
-  </header>
-
-  <main>
-    <section class="table-section">
-      <div class="table-header">
-        <h2>รายการครุภัณฑ์</h2>
+  <header class="app-header shadow-sm py-3 px-4 d-flex justify-content-between align-items-center">
+    <div class="logo fw-bold fs-5">LOGO</div>
+    <h1 class="h4 m-0 flex-grow-1 text-center">ระบบตรวจสอบครุภัณฑ์</h1>
+    
+    <div class="header-actions d-flex align-items-center gap-2">
+      <div class="input-group input-group-sm search-input-group">
+        <span class="input-group-text"><i class="bi bi-search"></i></span>
+        <input type="text" id="searchInput" class="form-control" placeholder="ค้นหา..." />
       </div>
+      <a href="login.html" class="btn btn-light fw-bold">LOGIN</a>
+    </div>
+  </header>
 
-      <div id="errorBox"></div>
+  <main class="container my-5">
+    <section class="card shadow-lg">
+      <div class="card-body p-4">
+        <div class="d-flex justify-content-between align-items-center border-bottom border-primary pb-2 mb-3">
+          <h2 class="h5 text-primary m-0">รายการครุภัณฑ์</h2>
+        </div>
 
-      <table id="equipmentTable">
-        <thead>
-          <tr>
-            <th>รหัสครุภัณฑ์</th>
-            <th>ชื่อ</th>
-            <th>ที่อยู่</th>
-            <th>สถานะ</th>
-            <th>ดูรายละเอียด</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+        <div id="errorBox" class="alert alert-danger" style="display:none;"></div>
 
-      <div class="debug" id="debugBox" style="display:none;"></div>
-    </section>
-  </main>
-  
-  <!-- Modal -->
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      <span id="closeModal" class="close">&times;</span>
-      <div id="modalDetails"></div>
-    </div>
-  </div>
+        <div class="table-responsive">
+          <table id="equipmentTable" class="table table-striped table-hover align-middle">
+            <thead>
+              <tr class="table-primary">                 <th>รหัสครุภัณฑ์</th>
+                <th>ชื่อ</th>
+                <th>ที่อยู่</th>
+                <th>สถานะ</th>
+                <th>ดูรายละเอียด</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
 
-  <script src="./scripts/Show.js"></script>
+        <div class="debug small text-muted mt-3" id="debugBox" style="display:none;"></div>
+      </div>
+    </section>
+  </main>
+  
+    <div class="modal fade" id="dataModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalLabel">รายละเอียดครุภัณฑ์</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" id="modalDetails">
+                  </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">ปิด</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="./scripts/Show.js"></script>
+    <script 
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+    crossorigin="anonymous"></script>
 </body>
 </html>
