--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ระบบตรวจสอบครุภัณฑ์</title>
+  
     <link 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" 
@@ -12,9 +13,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   
   <style>
-    /* สี Header ตามรูปตัวอย่าง */
+    /* สี Header ตามรูปตัวอย่าง: ฟ้าอ่อน/น้ำเงิน */
     .app-header {
-        background-color: #4a90e2; /* สีฟ้าอ่อน/น้ำเงินตามรูป */
+        background-color: #4a90e2; 
         color: white;
     }
     /* พื้นหลังโดยรวม */
@@ -24,6 +25,11 @@
     /* ปรับปรุง Search Input ให้ดูดีขึ้นเล็กน้อย */
     .search-input-group {
         width: 250px;
+    }
+    /* ปรับปรุงสี Header ของตารางให้ดูสว่างขึ้น (คล้าย table-primary) */
+    .table-custom-header th {
+      background-color: #cfe2ff !important;
+      color: #004085;
     }
   </style>
 </head>
@@ -43,18 +49,19 @@
   </header>
 
   <main class="container my-5">
-    <section class="card shadow-lg">
+        <section class="card shadow-lg mx-auto" style="max-width: 900px;">
       <div class="card-body p-4">
+        
         <div class="d-flex justify-content-between align-items-center border-bottom border-primary pb-2 mb-3">
           <h2 class="h5 text-primary m-0">รายการครุภัณฑ์</h2>
         </div>
 
-        <div id="errorBox" class="alert alert-danger" style="display:none;"></div>
+                <div id="errorBox" class="alert alert-danger" style="display:none;"></div>
 
         <div class="table-responsive">
           <table id="equipmentTable" class="table table-striped table-hover align-middle">
             <thead>
-              <tr class="table-primary">                 <th>รหัสครุภัณฑ์</th>
+              <tr class="table-custom-header">                 <th>รหัสครุภัณฑ์</th>
                 <th>ชื่อ</th>
                 <th>ที่อยู่</th>
                 <th>สถานะ</th>
